server/public/styles.css
body {
  font-family: Raleway, sans-serif;
}

h1,
h2,
h3 {
  font-weight: 600;
}

a {
  color: #212121;
}

.width-100 {
  width: 100%;
}

.pl-half-rem {
  padding: 0 0 0 0.5rem !important;
}

.pr-half-rem {
  padding: 0 0.5rem 0 0 !important;
}

.plr-three-fourth-rem {
  padding: 0 0.75rem;
}

.text-center {
  text-align: center;
}

.mt-half-rem {
  margin-top: 0.5rem;
}

.mb-one-rem {
  margin-bottom: 1rem;
}

.mt-one-rem {
  margin-top: 1rem;
}

.mb-two-rem {
  margin-bottom: 2rem;
}

.mt-two-rem {
  margin-top: 2rem;
}

.flex-wrap {
  display: flex;
  flex-wrap: wrap;
}

.flex-end {
  display: flex;
  justify-content: flex-end;
}

.flex-start {
  display: flex;
  justify-content: flex-start;
}

.flex-center {
  display: flex;
  justify-content: center;
}

.justify-between {
  display: flex;
  justify-content: space-between;
}

.align-center {
  display: flex;
  align-items: center;
}

.font-two-rem {
  font-size: 2rem;
}

.bold {
  font-weight: 600;
}

.plr-three-fourth {
  padding: 0 0.75rem;
}

.mr-third-rem {
  margin-right: 0.75rem;
}

.ml-third-rem {
  margin-left: 0.75rem;
}

.mr-one-rem {
  margin-right: 1rem;
}

.click-target {
  cursor: pointer;
}

.heart-color {
  color: #ef5350;
}

.blue-icon {
  color: #2196f3;
}

.green-icon {
  color: #26a69a;
}

.nav-icon {
  font-size: 2rem;
  margin-right: 1rem;
}

.blockquote-color {
  width: 100%;
  border-left: 5px solid #26a69a;
}

.light-grey-text {
  color: #b0bec5;
}

.blogpost p,
.blogpost blockquote {
  line-height: 2.25rem;
  white-space: pre-wrap;
}

.blogpost h3 {
  width: 100%;
  font-size: 1rem;
  margin: 0.5rem 0 1rem;
}

.blogpost h2 {
  width: 100%;
  font-size: 1.25rem;
  margin: 0;
}

.blogpost h1,
.feed h1 {
  width: 100%;
  font-size: 2rem;
  margin: 1rem 0 0.5rem;
}

.comment-time-ago {
  font-size: 0.9rem;
  margin-left: 1rem;
}

.share-icon {
  font-size: 2rem !important;
}

.trash-icon {
  font-size: 2.5rem;
}

.auth-form a {
  text-decoration: underline;
  font-weight: 600;
}

.not-found img {
  width: 100%;
}

.no-results img {
  margin: 2.5rem 0;
  width: 195px;
}

.not-found h1 {
  margin: 0;
}

.not-found .btn-large,
.no-results .btn-large {
  margin: 3rem 0 2.5rem;
}

.card-image .btn-floating {
  top: 1.25rem;
}

.card-username {
  color: #b0bec5;
  font-weight: 500;
  margin-bottom: 0.5rem !important;
}

.edit-form h1,
.form h1 {
  margin: 1.68rem 0;
  font-size: 2rem;
}

.modal-bg {
  z-index: 2;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: rgb(0 0 0 / 70%);
  height: 100vh;
}

.custom-modal {
  position: fixed;
  background-color: #fafafa;
  width: 55%;
  border-radius: 2px;
}

.custom-modal .body,
.custom-modal .footer {
  padding: 14px;
  text-align: center;
}

@media only screen and (min-width: 993px) {
  .blogpost p {
    margin: 1rem 0;
  }

  .blockquote-color {
    order: 3;
  }

  .share-btn {
    order: 4;
  }

  .not-found img {
    max-width: 750px;
  }

  .custom-modal .body {
    padding: 24px;
  }

  .custom-modal .footer {
    padding: 24px;
  }
}

@media only screen and (min-width: 1200px) {
  .blogpost p {
    font-size: 1.1rem;
    margin: 2rem 0;
  }

  .blockquote-color {
    font-size: 1.15rem;
  }

  .blogpost h3 {
    font-size: 1.25rem;
  }

  .blogpost h2 {
    font-size: 1.5rem;
  }

  .blogpost h1 {
    font-size: 2.5rem;
  }

  .pad-l-half-rem {
    padding: 0 0 0 1rem !important;
  }

  .pad-r-half-rem {
    padding: 0 1rem 0 0 !important;
  }
}

